--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -55,8 +55,8 @@ jobs:
       - name: Determine new version
         id: set-version
         run: |
-          # Get the latest tag
-          latest_tag=$(git describe --tags `git rev-list --tags --max-count=1`)
+          # Get the latest tag, or set a default if none are found
+          latest_tag=$(git describe --tags `git rev-list --tags --max-count=1` || echo "v0.0.0")
           echo "Latest tag: $latest_tag"
 
           # Extract the version numbers
