--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,12 +1,13 @@
 name: Docker CI/CD Pipeline with Semantic Versioning
 
 on:
-  pull_request:
-    branches:
-      - main
-      - homolog
-
   push:
+    branches:
+      - develop
+      - homolog
+      - main
+
+  pull_request:
     branches:
       - main
 
@@ -14,10 +15,9 @@ env:
   IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/conversao-distancia
 
 jobs:
-  build-and-test:
+  build-and-publish-develop:
+    if: github.ref == 'refs/heads/develop'
     runs-on: ubuntu-latest
-    outputs:
-      image_tag: ${{ steps.tag-image.outputs.image_tag }}
     steps:
       - name: Check out the code
         uses: actions/checkout@v2
@@ -31,47 +31,63 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker image
+      - name: Build and Push Develop Image
+        run: |
+          docker build -t $IMAGE_NAME:develop .
+          docker push $IMAGE_NAME:develop
+
+  build-and-publish-homolog:
+    if: github.ref == 'refs/heads/homolog'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the code
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and Push Homolog Image
+        run: |
+          docker build -t $IMAGE_NAME:homolog .
+          docker push $IMAGE_NAME:homolog
+
+  build-and-publish-production:
+    if: github.event_name == 'pull_request' && github.event.pull_request.merged && github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    needs: [build-and-test, determine-version]
+    steps:
+      - name: Check out the code
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build Production Image with Version
         id: tag-image
         run: |
           docker build -t $IMAGE_NAME:latest .
-          echo "::set-output name=image_tag::latest"
+          docker tag $IMAGE_NAME:latest $IMAGE_NAME:${{ needs.determine-version.outputs.new_version }}
 
-      - name: Verify Docker image
-        run: |
-          if ! docker images $IMAGE_NAME | grep -q "latest"; then
-            echo "Error: Image $IMAGE_NAME:latest was not built."
-            exit 1
-          fi
-
-      - name: Push Latest Image to Docker Hub
+      - name: Push Production Image
         run: |
           docker push $IMAGE_NAME:latest
-
-      - name: Run Application Tests
-        run: |
-          # Inicia o contêiner
-          docker run --rm -d -p 5000:5000 --name test-container $IMAGE_NAME:latest
-
-          # Aguardar o contêiner iniciar completamente
-          echo "Aguardando a inicialização do contêiner..."
-          sleep 10
-
-          # Testa a aplicação
-          if curl -f http://localhost:5000/; then
-            echo "Teste de API bem-sucedido!"
-          else
-            echo "Erro na API. Logs do contêiner:"
-            docker logs test-container
-            exit 1
-          fi
-
-          # Para o contêiner após os testes
-          docker stop test-container
+          docker push $IMAGE_NAME:${{ needs.determine-version.outputs.new_version }}
 
   determine-version:
     runs-on: ubuntu-latest
-    needs: build-and-test
+    if: github.ref == 'refs/heads/main'
     outputs:
       new_version: ${{ steps.set-version.outputs.NEW_VERSION }}
     steps:
@@ -84,16 +100,11 @@ jobs:
       - name: Determine new version
         id: set-version
         run: |
-          # Get the latest tag, or set a default if none are found
           latest_tag=$(git describe --tags `git rev-list --tags --max-count=1` || echo "v0.0.0")
           echo "Latest tag: $latest_tag"
-
-          # Extract the version numbers
           major=$(echo $latest_tag | cut -d. -f1 | sed 's/v//')
           minor=$(echo $latest_tag | cut -d. -f2)
           patch=$(echo $latest_tag | cut -d. -f3)
-
-          # Determine if this is a major, minor, or patch update
           if git log -1 --pretty=%B | grep -q '#major'; then
             major=$((major + 1))
             minor=0
@@ -104,71 +115,6 @@ jobs:
           else
             patch=$((patch + 1))
           fi
-
-          # Create the new version string
           new_version="v${major}.${minor}.${patch}"
-          echo "New version: $new_version"
-
-          # Export the new version
           echo "NEW_VERSION=$new_version" >> $GITHUB_ENV
           echo "::set-output name=NEW_VERSION::$new_version"
-
-  publish-staging:
-    needs: [build-and-test, determine-version]
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
-    steps:
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Pull Latest Image
-        run: |
-          docker pull $IMAGE_NAME:latest
-
-      - name: Push Staging Image
-        run: |
-          docker tag $IMAGE_NAME:latest $IMAGE_NAME:${{ needs.determine-version.outputs.new_version }}-staging
-          docker push $IMAGE_NAME:${{ needs.determine-version.outputs.new_version }}-staging
-
-  publish-homolog:
-    needs: [build-and-test, determine-version]
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' && github.event.pull_request.merged
-    steps:
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Pull Latest Image
-        run: |
-          docker pull $IMAGE_NAME:latest
-
-      - name: Push Homolog Image
-        run: |
-          docker tag $IMAGE_NAME:latest $IMAGE_NAME:${{ needs.determine-version.outputs.new_version }}-homolog
-          docker push $IMAGE_NAME:${{ needs.determine-version.outputs.new_version }}-homolog
-
-  publish-production:
-    needs: [build-and-test, determine-version]
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    steps:
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Pull Latest Image
-        run: |
-          docker pull $IMAGE_NAME:latest
-
-      - name: Push Production Image
-        run: |
-          docker tag $IMAGE_NAME:latest $IMAGE_NAME:${{ needs.determine-version.outputs.new_version }}
-          docker push $IMAGE_NAME:${{ needs.determine-version.outputs.new_version }}
