--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -57,34 +57,6 @@ jobs:
           docker build -t $IMAGE_NAME:homolog .
           docker push $IMAGE_NAME:homolog
 
-  build-and-publish-production:
-    if: github.event_name == 'pull_request' && github.event.pull_request.merged && github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-    needs: [build-and-test, determine-version]
-    steps:
-      - name: Check out the code
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build Production Image with Version
-        id: tag-image
-        run: |
-          docker build -t $IMAGE_NAME:latest .
-          docker tag $IMAGE_NAME:latest $IMAGE_NAME:${{ needs.determine-version.outputs.new_version }}
-
-      - name: Push Production Image
-        run: |
-          docker push $IMAGE_NAME:latest
-          docker push $IMAGE_NAME:${{ needs.determine-version.outputs.new_version }}
-
   determine-version:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
@@ -118,3 +90,30 @@ jobs:
           new_version="v${major}.${minor}.${patch}"
           echo "NEW_VERSION=$new_version" >> $GITHUB_ENV
           echo "::set-output name=NEW_VERSION::$new_version"
+
+  build-and-publish-production:
+    if: github.event_name == 'pull_request' && github.event.pull_request.merged && github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    needs: determine-version
+    steps:
+      - name: Check out the code
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build Production Image with Version
+        run: |
+          docker build -t $IMAGE_NAME:latest .
+          docker tag $IMAGE_NAME:latest $IMAGE_NAME:${{ needs.determine-version.outputs.new_version }}
+
+      - name: Push Production Image
+        run: |
+          docker push $IMAGE_NAME:latest
+          docker push $IMAGE_NAME:${{ needs.determine-version.outputs.new_version }}
