--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -71,7 +71,7 @@ jobs:
   determine-version:
     runs-on: ubuntu-latest
     needs: build-and-test
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && github.event.pull_request.merged == true
     outputs:
       new_version: ${{ steps.set-version.outputs.NEW_VERSION }}
     steps:
@@ -105,7 +105,7 @@ jobs:
           echo "::set-output name=NEW_VERSION::$new_version"
 
   publish-staging:
-    needs: [build-and-test, determine-version]
+    needs: [build-and-test]
     if: github.ref == 'refs/heads/develop'
     runs-on: ubuntu-latest
     steps:
@@ -114,7 +114,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Pull Latest Image
+      - name: Pull Develop Image
         run: |
           docker pull $IMAGE_NAME:develop
       - name: Push Staging Image
@@ -123,7 +123,7 @@ jobs:
           docker push $IMAGE_NAME:staging
 
   publish-homolog:
-    needs: [build-and-test, determine-version]
+    needs: [build-and-test]
     if: github.ref == 'refs/heads/homolog'
     runs-on: ubuntu-latest
     steps:
@@ -132,7 +132,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Pull Latest Image
+      - name: Pull Homolog Image
         run: |
           docker pull $IMAGE_NAME:homolog
       - name: Push Homolog Image
