--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
     outputs:
-      image_tag: ${{ steps.tag-image.outputs.image_tag }}
+      image_tag: ${{ steps.set-tag.outputs.image_tag }}
     steps:
       - name: Check out the code
         uses: actions/checkout@v2
@@ -31,32 +31,37 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker image
-        id: tag-image
+      - name: Set Image Tag
+        id: set-tag
         run: |
           if [[ "${GITHUB_REF}" == "refs/heads/develop" ]]; then
-            docker build -t $IMAGE_NAME:develop .
+            echo "::set-output name=image_tag::develop"
           elif [[ "${GITHUB_REF}" == "refs/heads/homolog" ]]; then
-            docker build -t $IMAGE_NAME:homolog .
+            echo "::set-output name=image_tag::homolog"
           elif [[ "${GITHUB_REF}" == "refs/heads/main" ]]; then
-            docker build -t $IMAGE_NAME:latest .
+            echo "::set-output name=image_tag::latest"
+          else
+            echo "::set-output name=image_tag::pr"
           fi
-          echo "::set-output name=image_tag::${GITHUB_REF##*/}"
+
+      - name: Build Docker image
+        run: |
+          docker build -t $IMAGE_NAME:${{ steps.set-tag.outputs.image_tag }} .
 
       - name: Verify Docker image
         run: |
-          if ! docker images $IMAGE_NAME | grep -q "${GITHUB_REF##*/}"; then
-            echo "Error: Image $IMAGE_NAME:${GITHUB_REF##*/} was not built."
+          if ! docker images $IMAGE_NAME | grep -q "${{ steps.set-tag.outputs.image_tag }}"; then
+            echo "Error: Image $IMAGE_NAME:${{ steps.set-tag.outputs.image_tag }} was not built."
             exit 1
           fi
 
       - name: Push Image to Docker Hub
         run: |
-          docker push $IMAGE_NAME:${GITHUB_REF##*/}
+          docker push $IMAGE_NAME:${{ steps.set-tag.outputs.image_tag }}
 
       - name: Run Application Tests
         run: |
-          docker run --rm -d -p 5000:5000 --name test-container $IMAGE_NAME:${GITHUB_REF##*/}
+          docker run --rm -d -p 5000:5000 --name test-container $IMAGE_NAME:${{ steps.set-tag.outputs.image_tag }}
           echo "Aguardando a inicialização do contêiner..."
           sleep 10
           if curl -f http://localhost:5000/; then
