--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,6 +7,8 @@ on:
       - homolog
 
   pull_request:
+    types:
+      - closed
     branches:
       - main
 
@@ -76,7 +78,7 @@ jobs:
   determine-version:
     runs-on: ubuntu-latest
     needs: build-and-test
-    if: github.ref == 'refs/heads/main' && github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true && github.ref == 'refs/heads/main'
     outputs:
       new_version: ${{ steps.set-version.outputs.NEW_VERSION }}
     steps:
@@ -147,7 +149,7 @@ jobs:
 
   publish-production:
     needs: [build-and-test, determine-version]
-    if: github.event_name == 'pull_request' && github.event.pull_request.merged && github.base_ref == 'main'
+    if: github.event.pull_request.merged == true && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - name: Log in to Docker Hub
